Revert change to ParserTest